--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .terraform.tfstate.lock.info
 # Directorio .terraform 
 .terraform/
+*.tfvars
+/main.tf
 # Terraform CLI config
 .terraformrc
 .terraform.lock.hcl
